# Games_Engineering_CW_RunNGun

./: CMakeLists.txt  README.md
Final Report/: Final Report.docx  GameStates.xml  PlayingState.xml
Game Design Document/: Group_R_Game_Design_Document.docx  gdd-template.docx
Game Pitch/: Group R Games Engineering Pitch.pptx
Personal Report/: Individual Report.docx
RunNGun/: RunNGun.sln
RunNGun/Debug/: vc140.idb
RunNGun/Debug/RunNGun.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RunNGun.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RunNGun/RunNGun/: Game.cpp  GameObjects.cpp  GameObjects.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  ObjManager.h  ObjManagercpp.cpp  Player.cpp  Player.h  ReadMe.txt  RunNGun.cpp  RunNGun.vcxproj  RunNGun.vcxproj.filters  SplashScreen.cpp  SplashScreen.h  game.h  main.cpp  stdafx.cpp  stdafx.h
RunNGun/RunNGun/Debug/: vc140.idb
RunNGun/RunNGun/Debug/RunNGun.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RunNGun.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RunNGun/ipch/RUNNGUN-27d4c96e/: RUNNGUN-5a3acc59.ipch
RunNGun/ipch/RUNNGUN-85de0b25/: RUNNGUN-5a3acc59.ipch
SFML-2.4.2/include/SFML/: sfml.h
